# CatAna

./: .doctr-files  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  catana.html  catana_besseltools.html  catana_decomp.html  catana_install.html  catana_io.html  catana_usage.html  config.cmake.example  config.cmake.sample  external_projects.cmake  genindex.html  github_deploy_key.enc  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
catana/: CMakeLists.txt
catana/executable/: catana.cpp
catana/include/catana/: Catalog.hpp  Field.hpp  Window.hpp  besseltools.hpp  catalog.hpp  catana.hpp  config.hpp.in  decomposition.hpp  field.hpp  io.hpp  iotools.hpp  types.hpp  window.hpp
catana/include/catana/besseltools/: BesselZeros.hpp  SBesselInterpolator.hpp  SBesselLookUp.hpp  SphericalBesselZeros.hpp  sbessel_integrator.hpp  sbessel_integrator_test.hpp
catana/include/catana/decomposition/: Analyzer.hpp  return_types.hpp  sfb_decomposition.hpp  sfb_raw.hpp  sfb_reverse.hpp  sfb_reverse_fft.hpp
catana/include/catana/io/: Filter.hpp  FilterStream.hpp  Sink.hpp  Source.hpp  record_types.hpp
catana/include/catana/io/filters/: angular_filters.hpp  radial_filters.hpp
catana/include/catana/io/sinks/: ObjectContainerSink.hpp  PixelizedObjectContainerSink.hpp  PixelizedPointContainerSink.hpp  PointContainerSink.hpp  RawBinarySink.hpp  TextSink.hpp
catana/include/catana/io/sources/: GadgetSource.hpp  ObjectContainerSource.hpp  PointContainerSource.hpp  RawBinarySource.hpp  TextSource.hpp
catana/include/catana/io_tools/: Filter.hpp  FilterStream.hpp  Sink.hpp  Source.hpp  filters.hpp  read_gadget.hpp  read_hdf5.hpp  read_hdf5.ipp  record_types.hpp  write_hdf5.hpp  write_hdf5.ipp
catana/include/catana/io_tools/filters/: angular_filters.hpp  radial_filters.hpp
catana/include/catana/io_tools/sinks/: HDF5Sink.hpp  ObjectContainerSink.hpp  (+4 more)
catana/include/catana/objects/: Object.hpp  ObjectContainer.hpp  PixelizedObjectContainer.hpp
catana/include/catana/points/: PixelizedPointContainer.hpp  Point.hpp  PointContainer.hpp
catana/include/catana/tools/: FunctionInterpolator.hpp  Object.hpp  ObjectContainer.hpp  PixelizedObjectContainer.hpp  besseltools.hpp  fftw_field.hpp  gsl_function_interpolate.hpp  gsl_function_wrapper.hpp  object_types.hpp  random.hpp  return_types.hpp  string_format.hpp  timer.hpp
catana/src/: Catalog.cpp  Field.cpp  Window.cpp  catalog.cpp  field.cpp
catana/src/besseltools/: BesselZeros.cpp  SBesselInterpolator.cpp  SBesselLookUp.cpp  SphericalBesselZeros.cpp  besseltools.cpp  sbessel_integrator.cpp
catana/src/decomposition/: Analyzer.cpp  return_types.cpp  sfb_decomposition.cpp  sfb_raw.cpp  sfb_reverse.cpp  sfb_reverse_fft.cpp
catana/src/io/: Filter.cpp  FilterStream.cpp  Sink.cpp  Source.cpp  record_type.cpp
catana/src/io/filters/: angular_filters.cpp  radial_filters.cpp
catana/src/io/sinks/: RawBinarySink.cpp  TextSink.cpp
catana/src/io/sources/: GadgetSource.cpp  ObjectContainerSource.cpp  PointContainerSource.cpp  RawBinarySource.cpp  TextSource.cpp
catana/src/io_tools/: Filter.cpp  FilterStream.cpp  Source.cpp  read_gadget.cpp  record_type.cpp
catana/src/io_tools/filters/: angular_filters.cpp  radial_filters.cpp
catana/src/io_tools/sinks/: HDF5Sink.cpp  RawBinarySink.cpp  TextSink.cpp  write_hdf5.cpp  write_rawbinary.cpp
catana/src/io_tools/sources/: GadgetSource.cpp  HDF5Source.cpp  ObjectContainerSource.cpp  RawBinarySource.cpp  TextSource.cpp  read_gadget.cpp  read_hdf5.cpp  read_rawbinary.cpp
catana/src/objects/: Object.cpp  ObjectContainer.cpp  PixelizedObjectContainer.cpp
catana/src/points/: PixelizedPointContainer.cpp  Point.cpp  PointContainer.cpp
catana/src/tools/: FunctionInterpolator.cpp  ObjectContainer.cpp  PixelizedObjectContainer.cpp  besseltools.cpp  gsl_function_interpolate.cpp  random.cpp  return_types.cpp  timer.cpp
python/: CMakeLists.txt  catana.html  catana_besseltools.html  catana_decomp.html  catana_io.html  catana_misc.html  py_basictypes.cpp  py_besseltools.cpp  py_decomposition.cpp  py_io.cpp  pycatana.pyx  setup.py  setup.py.in
python/CatAna/: __init__.py  decomp.py  io.py  py_basictypes.cpp  py_besseltools.cpp  py_decomposition.cpp  py_iotools.cpp
python/catana/: __init__.py  _version.py
python/scripts/: CatAna_Analyze.py  CatAna_Extract.py  helpers.py
test/: CMakeLists.txt  config.hpp.in  main.cpp
test/besseltools_tests/: BesselZeros_test.cpp  CMakeLists.txt  SBesselLookUp_test.cpp  SphericalBesselZeros_test.cpp  sbessel_integrator.cpp  sbessel_integrator_test.cpp  zeros.cpp
test/catalog_tests/: CMakeLists.txt
test/decomposition_tests/: CMakeLists.txt  analyzer_test.cpp  sfb_test.cpp
test/decomposition_time/: CMakeLists.txt  monch_run.sh  sfb_decomp_time.cpp  timer.hpp
test/field_tests/: CMakeLists.txt  field_basics.cpp
test/io_tests/: CMakeLists.txt  filter_stream_test.cpp  filter_tests.cpp  filter_tests.cpp.in  interpolation_tests.cpp  monch_gadget2hdf5test.cpp  pixelized_oc_sink_test.cpp  read_gadget_tests.cpp  read_hdf5_tests.cpp  read_text_tests.cpp  readwrite_rawdata_tests.cpp  readwrite_text_tests.cpp  write_hdf5_tests.cpp  write_rawdata_tests.cpp
test/object_types_tests/: CMakeLists.txt  object_types_tests.cpp
test/point_types_tests/: point_types_tests.cpp
test/python/: besseltools_test.py  decomposition_test.py  io_test.py  point_test.py
test/speed_comparisons/: CMakeLists.txt  json.hpp  sbessel_compute.cpp  sfb_decomp_threadscale.cpp  sfb_decomp_time.cpp  sfb_decomp_time_deprecated.cpp  sfb_decomp_time_deprecated.sh  sfb_decomp_time_monch.sh  sfb_decomp_time_paramscale.cpp  sfb_decomp_time_paramscale.json  timer.cpp  timer.hpp
test/test_data/: gaussian_catalog.hdf  gaussian_catalog.python.c_ln  gaussian_catalog.python.k_ln  gaussian_catalog.pythonrev.c_ln  gaussian_catalog.txt  mock_data.hdf5  mock_data.txt  mock_data_z0p000.0  mock_data_z0p000.1  testmap.fits
test/tools_tests/: CMakeLists.txt  interpolation_tests.cpp  return_types_test.cpp
(+59 files in other folders)
