add_executable(read_gadget_tests read_gadget_tests.cpp)
target_link_libraries(read_gadget_tests gtest gtest_main)
target_link_libraries(read_gadget_tests iotools)

add_executable(read_hdf5_tests read_hdf5_tests.cpp)
target_link_libraries(read_hdf5_tests gtest gtest_main)
target_link_libraries(read_hdf5_tests iotools)

add_executable(write_hdf5_tests write_hdf5_tests.cpp)
target_link_libraries(write_hdf5_tests gtest gtest_main)
target_link_libraries(write_hdf5_tests iotools)

add_executable(filter_tests filter_tests.cpp)
target_link_libraries(filter_tests gtest gtest_main)
target_link_libraries(filter_tests iotools)

add_executable(filter_stream_tests filter_stream_test.cpp)
target_link_libraries(filter_stream_tests gtest gtest_main)
target_link_libraries(filter_stream_tests iotools)

add_executable(monch_gadget2hdf5test monch_gadget2hdf5test.cpp)
target_link_libraries(monch_gadget2hdf5test iotools)

