add_executable(read_gadget_tests read_gadget_tests.cpp)
target_link_libraries(read_gadget_tests gtest gtest_main)
target_link_libraries(read_gadget_tests io)

add_executable(readwrite_text_tests readwrite_text_tests.cpp)
target_link_libraries(readwrite_text_tests gtest gtest_main)
target_link_libraries(readwrite_text_tests io)

add_executable(readwrite_rawdata_tests readwrite_rawdata_tests.cpp)
target_link_libraries(readwrite_rawdata_tests gtest gtest_main)
target_link_libraries(readwrite_rawdata_tests io)

add_executable(filter_tests filter_tests.cpp)
target_link_libraries(filter_tests gtest gtest_main)
target_link_libraries(filter_tests io)

add_executable(filter_stream_tests filter_stream_test.cpp)
target_link_libraries(filter_stream_tests gtest gtest_main)
target_link_libraries(filter_stream_tests io)

add_executable(pixelized_oc_sink_test pixelized_oc_sink_test.cpp)
target_link_libraries(pixelized_oc_sink_test gtest gtest_main)
target_link_libraries(pixelized_oc_sink_test io)

